@@ -1,10 +1,0 @@
-<?php
-
-namespace SimpleComplex\Database\Exception;
-
-/**
- * @package SimpleComplex\Database
- */
-class DbLogicalException extends \LogicException
-{
-}
